<resources>
    <string name="app_name">HeyConvo!</string>
    <string name="enter_your_id">Enter username :-</string>
    <string name="login">LOGIN</string>
    <string name="text">Text</string>
    <string name="this_is_text">This is text</string>
    <string name="enter_the_call_recipient_s_name">Enter call recipient\'s name</string>
    <string name="curiosity_made">Curiosity made</string>
    <string name="now_supports_free_audio_video_calls"><![CDATA[Now supports free \n Audio & Video calls]]></string>
    <string name="v2_0">v2.0</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="username">UserName</string>
    <string name="signup">signup</string>
    <string name="welcome">Welcome</string>
    <string name="create_an_account_with_us">Create an account with us.</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_user">Already a user?</string>
    <string name="email">Email</string>
    <string name="new_here_need_an_account">New here? Need an account?</string>
    <string name="sign_up2">SIGN UP!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login2">Login</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="login3">Login</string>
    <string name="name">Name</string>
    <string name="name2">name</string>
    <string name="save">Save</string>
    <string name="do_you_really_want_to_n_log_out">Do you really want \n to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="type_your_message">Type your message...</string>
</resources>