<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_262sdp"
    android:layout_height="@dimen/_232sdp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="13dp"
    android:background="@drawable/gradient">


    <ImageView
        android:id="@+id/logoutdia"
        android:layout_width="@dimen/_62sdp"
        android:layout_height="@dimen/_62sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_18sdp"
        android:src="@drawable/logout2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_really_want_to_n_log_out"
        android:textSize="@dimen/_22sdp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/poppins_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_9sdp"

        android:orientation="horizontal">



        <Button
            android:id="@+id/nobnt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="#dc3333"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/no"
            android:radius="@dimen/_40sdp"/>


        <Button
            android:id="@+id/yesbnt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_10sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:layout_weight="1"
            android:backgroundTint="#71ef3a"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/yes" />

    </LinearLayout>


</LinearLayout>