<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".calling_class">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottomnav" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_104sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        app:srcCompat="@drawable/topnav" />


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_52sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128"
        app:srcCompat="@drawable/whitebg" />

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021">


        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_9sdp"
            app:srcCompat="@drawable/hamburgericon" />

        <TextView
            android:layout_width="@dimen/_82sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="#00000000"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/bell" />

        <ImageView
            android:id="@+id/logoutimg"
            android:layout_width="@dimen/_29sdp"
            android:layout_height="@dimen/_29sdp"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/logout"
            android:transitionName="loout_img" />


    </LinearLayout>

    <ImageView
        android:id="@+id/chatbut"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/chatoff" />

    <ImageView
        android:id="@+id/videooff"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/videoon" />

    <ImageView
        android:id="@+id/userbut"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/usericon" />

    <TextView
        android:layout_width="@dimen/_118sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="#00000000"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/_252sdp"
        android:layout_height="@dimen/_202sdp"
        android:background="@drawable/signup_shape"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72">

        <LinearLayout
            android:layout_width="@dimen/_259sdp"
            android:layout_height="@dimen/_62sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_9sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:srcCompat="@drawable/user" />

            <EditText
                android:id="@+id/TextID"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/login_back"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_your_id"
                android:inputType="text"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/callLogin"
            android:layout_width="@dimen/_102sdp"
            android:layout_height="@dimen/_62sdp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_20sdp"
            app:backgroundTint="#8BC34A" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="@dimen/_162sdp"
        android:layout_height="@dimen/_162sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        app:srcCompat="@drawable/chatnowlogo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/_182sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_italic"
        android:gravity="center_horizontal"
        android:text="@string/now_supports_free_audio_video_calls"
        android:textColor="#6C6969"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415" />


</androidx.constraintlayout.widget.ConstraintLayout>